[fix] header svg viewport size issue, coming soon letter spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -80,7 +80,7 @@ a {
   margin-top: 0;
   font-size: 0.9em;
   text-transform: uppercase;
-  letter-spacing: 5;
+  letter-spacing: 0.27em;
   color: #978ebd;
 }
 
